--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "init-db": "node scripts/init-database.js",
-    "build": "npm rebuild sqlite3 --build-from-source"
+    "init-db": "node scripts/init-database.js"
   },
   "dependencies": {
     "express": "^4.18.2",
