--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "init-db": "node scripts/init-database.js",
-    "build": "echo 'Build completed successfully'"
+    "build": "npm run init-db",
+    "postinstall": "npm run init-db"
   },
   "dependencies": {
     "express": "^4.18.2",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
-    "sqlite3": "^5.1.6",
+    "better-sqlite3": "^9.2.2",
     "multer": "^1.4.5-lts.1",
     "cors": "^2.8.5",
     "helmet": "^7.1.0",
